2005-07-07  Sebastien Bacher  <seb128@debian.org>

	* gnome-settings-xsettings.c: 
	patch by Matthias Clasen <mclasen@redhat.com> to expose the cursor 
	theme settings as xsettings (Closes: #308104).

2005-06-12  Sebastien Bacher  <seb128@debian.org>

	* gnome-settings-daemon.c: (clipboard_manager_watch_cb):
	return instead of using an assertion (Closes: #307149).

2005-06-12  Christophe Fergeau  <teuf@gnome.org>

	* actions/acme-volume-gstreamer.c:
	(acme_volume_gstreamer_get_volume): fix crash when trying to change 
	volume using the multimedia keys, fixes #307351

2005-03-23  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gnome-settings-accessibility-keyboard.c: make sticky keys and slow
	keys dialog more HIG compliant and usable (selectable text, no
	separator, making ESC key close the dialog, separation between
	widgets, etc...)

2005-06-06  Rodrigo Moya <rodrigo@novell.com>

	* GNOME_Settings_Daemon.server.in: added name and description
	to the object information.

2005-06-05  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* actions/Makefile.am:
	* actions/acme-volume-gstreamer.c:
	(acme_volume_gstreamer_set_mute), (update_state),
	(acme_volume_gstreamer_get_mute),
	(acme_volume_gstreamer_get_volume),
	(acme_volume_gstreamer_set_volume):
	  Fix mute handling, particularly for devices without hardware
	  mute support or with applications that use volume=0 for mute.
	  Also fix the fact that we linked against all of ALSA, OSS and
	  GStreamer if they were all available; default to GStreamer.
	  Fixes #306036.

2005-06-03  Anders Carlsson  <andersca@imendio.com>

	* Makefile.am:
	* clipboard-manager.c:
	* clipboard-manager.h:
	* list.c:
	* list.h:
	* xutils.c
	* xutils.h:
	Add clipboard manager files.
	
	* gnome-settings-daemon.c: (clipboard_manager_terminate_cb),
	(clipboard_manager_event_filter), (clipboard_manager_watch_cb),
	(finalize), (gnome_settings_daemon_new):
	Use clipboard manager for persistent clipboard storage.
	