@@ -1,5 +1,10 @@
 2005-07-07  Sebastien Bacher  <seb128@debian.org>
 
+	* gnome-settings-keyboard-xkb.c: (activation_error):
+	fix the markup usage of the XKB dialog (Closes: #308279).
+
+2005-07-07  Sebastien Bacher  <seb128@debian.org>
+
 	* gnome-settings-xsettings.c: 
 	patch by Matthias Clasen <mclasen@redhat.com> to expose the cursor 
 	theme settings as xsettings (Closes: #308104).
